RESOLVED FIXED180595
ProcessPoolConfiguration::copy() fails to copy the service worker path
https://bugs.webkit.org/show_bug.cgi?id=180595
Summary ProcessPoolConfiguration::copy() fails to copy the service worker path
Chris Dumez
Reported 2017-12-08 12:05:22 PST
ProcessPoolConfiguration::copy() fails to copy the service worker path.
Attachments
Patch (1.70 KB, patch)
2017-12-08 12:06 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-12-08 12:06:48 PST
Chris Dumez
Comment 2 2017-12-08 12:07:35 PST
Comment on attachment 328847 [details] Patch Clearing flags on attachment: 328847 Committed r225691: <https://trac.webkit.org/changeset/225691>
Chris Dumez
Comment 3 2017-12-08 12:07:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-12-08 12:08:15 PST
Note You need to log in before you can comment on or make changes to this bug.