ProcessPoolConfiguration::copy() fails to copy the service worker path https://bugs.webkit.org/show_bug.cgi?id=180595

Reviewed by Brady Eidson.

* UIProcess/API/APIProcessPoolConfiguration.cpp:
(API::ProcessPoolConfiguration::copy):

Canonical link: https://commits.webkit.org/196507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225691 268f45cc-cd09-0410-ab3c-d52691b4dbfc